--- a/index.html
+++ b/index.html
@@ -4,9 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SOHEL RANA </title> 
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">      
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <H1>Hello I am sohe Rana</H1>
+        <!-- 01 TOP BANNER SECTION Start-->
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1> <span class="orange-name-highlight">SOHEL</span>  Website</h1>
+            <h3>World Class Professional Devoloper</h3>
+            <P> I am a Graphics Designer. My core expertise includes Responsive graphics, UI / UX Design, PSD Design, Responsive design layout. I’m passionate about the ever-changing landscape of web technologies and I am always looking to push my skills to new levels. I`ve been fortunate to work with some great companies and industry leaders.</P>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sohel-rana-330410162/">Hire Me</a>
+        </div>
+            <div class="half-width">
+                <img src="images/jhankar profile.png" alt="">
+            </div>
+    </section>
+        <!--TOP BANNER SECTION END-->
+
+<!-- 02 DREAM AREA SECTION START-->
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become World's  Number one Developers</h3>
+            <p> I’m passionate about the ever-changing landscape of web technologies and I am always looking to push my skills to new levels. I`ve been fortunate to work with some great companies and industry leaders.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sohel-rana-330410162/">DOWNLOAD MY CV</a>
+        </div>
+    </section>
+<!-- 02 DREAM AREA SECTION START-->
+<!-- 03 Experience AREA SECTION START-->
+<section class="experience-area">
+    <div>
+        <h2>Experience</h2>
+    </div>
+    <div id="full-stack" class="half-width single-experience">
+        <h2 > Full Stack Web Developers</h2>
+        <h3  class="orange-name-highlight">2020 - present | Pro Level Web Dev </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, beatae neque? Dolore vero possimus quas quasi praesentium fugiat asperiores placeat iste commodi! Maxime officiis beatae at fuga, tenetur doloremque praesentium.</p>
+    </div>
+    <div id="baby-stack" class="half-width single-experience">
+        <h2 > Baby Web Developers</h2>
+        <h3  class="orange-name-highlight">2020 - present | Pro Level Web Dev </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, beatae neque? Dolore vero possimus quas quasi praesentium fugiat asperiores placeat iste commodi! Maxime officiis beatae at fuga, tenetur doloremque praesentium.</p>
+    </div>
+</section>
+ <!--Experience AREA SECTION END-->
+<footer>   
+    <p>© Sohel Rana, all right reserved.</p>
+</footer>
 </body>
 </html>
